--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,28 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Directorios de dependencias
+/vendor/
+/node_modules/
+
+# Archivos de caché y configuración local
+.env
+.env.local
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+
+# Archivos de IDE y editor de texto
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Directorios de build y compilación
+/build/
+/dist/
+
+# Logs y archivos de depuración
+*.log
+!/.gitignore
