--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require": {
         "php": ">=8.2",
         "guzzlehttp/guzzle": "^7.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "picqer/php-barcode-generator": "^3.2"
     },
     "config": {
         "allow-plugins": {
